mw-fix-favorite-Developer-DevCard-sections-146 fixed the DevCard section alignment problems; added a width to Fun Fact so text that isn't long enough to fill the box will have a surrounding container that's identical width and height as all fun fact blocks; PROBLEM FOUND: in FavsManager, I commented out the function initFavs and the code invoking it because the website wouldn't load; the error was something in console log I couldn't find a solution to before signing off for today.

--- a/src/styles/devlist.scss
+++ b/src/styles/devlist.scss
@@ -131,6 +131,7 @@ $platinum: #ecebea;
     background-color: white;
     padding: 0.5rem;
     height: 13ex;
+    width: 32ex;
   }
 
   //Dev facts
